--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://haksuly1.github.com/meetApp",
+  "homepage": "https://haksuly1.github.io/meetApp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
