--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "css-select": "^4.2.1",
+    "googleapis": "^59.0.0",
     "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "serverless-webpack": "^5.6.1"
   }
 }
