--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "atatus-spa": "^4.4.0",
+    "axios": "^0.26.1",
     "css-select": "^4.2.1",
     "googleapis": "^59.0.0",
+    "nprogress": "^0.2.0",
     "nth-check": "^2.0.1",
+    "puppeteer": "^13.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
+    "redux": "^4.1.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -55,7 +60,10 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "enzyme": "^3.11.0",
     "gh-pages": "^3.2.3",
+    "jest-cucumber": "^3.0.1",
     "serverless-webpack": "^5.6.1"
   }
 }
