--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -45,6 +45,13 @@ getAccessToken:
     - http:
         path: api/token/{code}
         method: get
+
+        getCalendarEvents:
+    handler: handler.getCalendarEvents
+    events:
+      - http:
+          path: api/get-events/{access_token}
+          method: get
 # you can overwrite defaults here
 #  stage: dev
 #  region: us-east-1
