--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -25,7 +25,7 @@ provider:
   name: aws
   runtime: nodejs12.x
   region: eu-central-1
-  timeout: 60 # optional, in seconds, default is 6
+  timeout: 60
   environment:
     CLIENT_ID: ${file(config.json):CLIENT_ID}
     CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
@@ -38,15 +38,13 @@ functions:
       - http:
           path: api/get-auth-url
           method: get
-
-getAccessToken:
-  handler: handler.getAccessToken
-  events:
-    - http:
-        path: api/token/{code}
-        method: get
-
-        getCalendarEvents:
+  getAccessToken:
+    handler: handler.getAccessToken
+    events:
+      - http:
+          path: api/token/{code}
+          method: get
+  getCalendarEvents:
     handler: handler.getCalendarEvents
     events:
       - http:
