troubleshooting to allow all origin

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "atatus-spa": "^4.4.0",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "css-select": "^4.2.1",
     "googleapis": "^59.0.0",
     "nprogress": "^0.2.0",
