--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "private": true,
   "homepage": "https://haksuly1.github.io/meetApp/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@svgr/webpack": "^6.2.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
     "atatus-spa": "^4.4.0",
     "axios": "^0.26.1",
-    "cors": "^2.8.5",
-    "css-select": "^4.2.1",
     "googleapis": "^59.0.0",
     "nprogress": "^0.2.0",
-    "nth-check": "^2.0.1",
-    "puppeteer": "^13.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
+    "uuid": "^7.0.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -60,11 +58,10 @@
     ]
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.2.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
     "gh-pages": "^3.2.3",
     "jest-cucumber": "^3.0.1",
-    "serverless-webpack": "^5.6.1"
+    "puppeteer": "^13.5.1"
   }
 }
