--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "atatus-js": "^4.4.1",
     "atatus-spa": "^4.4.0",
     "axios": "^0.26.1",
     "googleapis": "^59.0.0",
