adjusted app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "meetApp",
+  "short_name": "meetApp",
+  "name": "meet",
   "icons": [
     {
       "src": "favicon.ico",
