--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.0",
+    "recharts": "^2.1.9",
     "redux": "^4.1.2",
     "uuid": "^7.0.3",
     "web-vitals": "^0.2.4",
